# rinha-be-2024-q1-python

./: Dockerfile  README.md  docker-compose.yml  init.sql  nginx.conf  postgresql.conf  pyproject.toml  requirements.txt  rinha.db
load-test/user-files/results/rinhabackendcrebitossimulation-20240301132347154/: index.html  req_cre-ditos-5e6bc.html  req_de-bitos-a2bfa.html  req_extratos-8eb18.html  req_validac-o-es-cb68f.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240301132347154/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
load-test/user-files/results/rinhabackendcrebitossimulation-20240301135212710/: index.html  req_cre-ditos-5e6bc.html  req_de-bitos-a2bfa.html  req_extratos-8eb18.html  req_validac-o-es-cb68f.html
load-test/user-files/results/rinhabackendcrebitossimulation-20240301135212710/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinha_backend_q1_python/: database.py  db.py  db2.py  main.py  models.py  queries.py  schemas.py  teste.py
