[tool.poetry]
name = "rinha-backend-q1-python"
version = "0.1.0"
description = ""
authors = ["vlrosa-dev <victor.lmr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
