[tool.poetry]
name = "rinha-backend-q1-python"
version = "0.1.0"
description = ""
authors = ["vlrosa-dev <victor.lmr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
databases = {extras = ["asyncpg"], version = "^0.8.0"}
sqlalchemy = "1.4.42"
pyyaml = "^6.0.1"
orjson = "^3.9.15"


[tool.poetry.group.dev.dependencies]
starlette = "0.36.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
